--- a/src/app/shared-components-module/text-with-border/text-with-border.component.scss
+++ b/src/app/shared-components-module/text-with-border/text-with-border.component.scss
@@ -1,5 +1,11 @@
 @import "../../shared-services-module/websiteSettings/styleConfig.scss";
 
+@mixin wrapTextOnSmallScreens {
+  @media all and (max-width: $media-sm-width) {
+    white-space: normal;
+  }
+}
+
 .title_wrapper_primary {
   font-size: $bordered_text_primary_font_size;
   position: relative;
@@ -8,6 +14,7 @@
   white-space: nowrap;
   text-align: center;
   font-weight: bold;
+  @include wrapTextOnSmallScreens;
   &::after {
     content: "";
     position: absolute;
