--- a/src/app/shared-services-module/websiteSettings/styleConfig.scss
+++ b/src/app/shared-services-module/websiteSettings/styleConfig.scss
@@ -4,6 +4,8 @@ $smallSizeScreenBrakeDown: 670px;
 //screen widths
 $media-sm-width: 576px;
 $media-lg-width: 767px;
+$media-xl-width: 1024px;
+$media-xxl-width: 1500px;
 
 /* Top Nav - call to action*/
 $top_nav_background_color: transparent;
